add missing steps

--- a/logs.html.md.erb
+++ b/logs.html.md.erb
@@ -30,5 +30,5 @@ $ cf logs --recent
 to get the most recent logs.
 
 <div style="text-align:center">
-  <a href="./scale.html" class="btn-primary">I've learned how to see my logs</a>
+  <a href="./scale.html" class="btn btn-primary">I've learned how to see my logs</a>
 </div>
