--- a/prepare.html.md.erb
+++ b/prepare.html.md.erb
@@ -16,5 +16,5 @@ $ cd cf-sample-app-node
 You now have a functioning git repository that contains a simple application as well as a `package.json` file, which is used by Node’s dependency manager npm.
 
 <div style="text-align:center">
-  <a href="./deploy.html" class="btn-primary">I cloned the App source</a>
+  <a href="./deploy.html" class="btn btn-primary">I cloned the App source</a>
 </div>
