--- a/push-changes.html.md.erb
+++ b/push-changes.html.md.erb
@@ -39,5 +39,5 @@ $ cf push
 Finally, check that everything is working by visiting your app's URL from your web browser.
 
 <div style="text-align:center">
-  <a href="./bind-services.html" class="btn-primary">I can push local changes</a>
+  <a href="./environment.html" class="btn btn-primary">I can push local changes</a>
 </div>
