--- a/run-locally.html.md.erb
+++ b/run-locally.html.md.erb
@@ -19,5 +19,5 @@ Open [http://localhost:3000](http://localhost:3000) with your web browser. You s
 To stop the app from running locally, in the CLI, press `Ctrl+C` to exit.
 
 <div style="text-align:center">
-  <a href="./dependencies.html" class="btn-primary">I can run my App locally</a>
+  <a href="./push-changes.html" class="btn btn-primary">I can run my App locally</a>
 </div>
