--- a/deploy.html.md.erb
+++ b/deploy.html.md.erb
@@ -59,5 +59,5 @@ buildpack: node.js 1.5.8
 Now visit the app at the URL. You can find the URL in the `urls` property of the statement above.
 
 <div style="text-align:center">
-  <a href="./logs.html" class="btn-primary">I have deployed my App</a>
+  <a href="./logs.html" class="btn btn-primary">I have deployed my App</a>
 </div>
