fix broken link

--- a/bind-service.html.md.erb
+++ b/bind-service.html.md.erb
@@ -5,7 +5,7 @@ owner: @mastertinner
 
 <strong><%= modified_date %></strong>
 
-The [service marketplace](./service-offerings/index.html) has a large number of data stores, from Redis and MongoDB, to MariaDB and RabbitMQ. In this step you will add a small MongoDB database to your app.
+The [service marketplace](../service-offerings/index.html) has a large number of data stores, from Redis and MongoDB, to MariaDB and RabbitMQ. In this step you will add a small MongoDB database to your app.
 
 Create the database:
 
