remove @ from owner

--- a/environment.html.md.erb
+++ b/environment.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Define Environment Variables
-owner: @mastertinner
+owner: Tobias Fuhrimann
 ---
 
 <strong><%= modified_date %></strong>
