--- a/next-steps.html.md.erb
+++ b/next-steps.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Next Steps
-owner: @mastertinner
+owner: Tobias Fuhrimann
 ---
 
 You now know how to deploy an app, change its configuration, view logs, scale, and bind it to services.
