improve button styling

--- a/bind-service.html.md.erb
+++ b/bind-service.html.md.erb
@@ -161,6 +161,6 @@ $ cf push cf-sample-app-node
 
 You can access other services like Redis or MariaDB in a similar matter, simply by binding them to your app and accessing them through the environment variables.
 
-<div style="text-align:center">
+<div style="text-align:center;padding:3em;">
   <a href="./manifest.html" class="btn btn-primary">I've bound a service to my App</a>
 </div>
