--- a/dependencies.html.md.erb
+++ b/dependencies.html.md.erb
@@ -53,6 +53,6 @@ node_modules
   <strong>Pro Tip</strong>: To lock down your dependencies' versions before pushing, you can run <code>npm shrinkwrap</code>. This will create a <code>npm-shrinkwrap.json</code> file which holds the exact versions of all your dependencies. Any <code>npm install</code> will then install exactly these versions so you can be sure that your app is using versions which work.
 </p>
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./run-locally.html" class="btn btn-primary">I've installed the App dependencies locally</a>
 </div>
