--- a/deploy.html.md.erb
+++ b/deploy.html.md.erb
@@ -58,6 +58,6 @@ buildpack: node.js 1.5.8
 
 Now visit the app at the URL. You can find the URL in the `urls` property of the statement above.
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./logs.html" class="btn btn-primary">I have deployed my App</a>
 </div>
