--- a/environment.html.md.erb
+++ b/environment.html.md.erb
@@ -30,6 +30,6 @@ Restaging app cf-sample-app-node in org MyOrg / space MySpace as user@mydomain.c
 
  All environment variables are accessed using the `process.env` namespace from within your Node.js app.
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./bind-service.html" class="btn btn-primary">I've set my environment variable</a>
 </div>
