--- a/logs.html.md.erb
+++ b/logs.html.md.erb
@@ -29,6 +29,6 @@ $ cf logs --recent
 
 to get the most recent logs.
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./scale.html" class="btn btn-primary">I've learned how to see my logs</a>
 </div>
