--- a/manifest.html.md.erb
+++ b/manifest.html.md.erb
@@ -31,6 +31,6 @@ $ cf push
 
 You can define many more variables in a manifest file. To find more information about application manifests, go to the [About Apps](../devguide/deploy-apps/manifest.html) part of this documentation.
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./next-steps.html" class="btn btn-primary">I've added a manifest</a>
 </div>
