--- a/prepare.html.md.erb
+++ b/prepare.html.md.erb
@@ -15,6 +15,6 @@ $ cd cf-sample-app-node
 
 You now have a functioning git repository that contains a simple application as well as a `package.json` file, which is used by Node’s dependency manager npm.
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./deploy.html" class="btn btn-primary">I cloned the App source</a>
 </div>
