--- a/scale.html.md.erb
+++ b/scale.html.md.erb
@@ -53,6 +53,6 @@ OK
 
 The last statement shows a summary of the three instances with a memory cap of 256MB each that we now have.
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./dependencies.html" class="btn btn-primary">I know how to scale my App</a>
 </div>
