--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -11,6 +11,6 @@ Hang on for a few more minutes to learn how it all works, so you can make the mo
 
 The tutorial assumes that you have an <%= vars.product_short %> account, and that you have [Node.js and npm](https://nodejs.org/en/download) installed locally.
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./set-up.html" class="btn btn-primary">I'm ready to start</a>
 </div>
