--- a/push-changes.html.md.erb
+++ b/push-changes.html.md.erb
@@ -38,6 +38,6 @@ $ cf push
 
 Finally, check that everything is working by visiting your app's URL from your web browser.
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./environment.html" class="btn btn-primary">I can push local changes</a>
 </div>
