--- a/run-locally.html.md.erb
+++ b/run-locally.html.md.erb
@@ -18,6 +18,6 @@ Open [http://localhost:3000](http://localhost:3000) with your web browser. You s
 
 To stop the app from running locally, in the CLI, press `Ctrl+C` to exit.
 
-<div style="text-align:center">
+<div style="text-align:center;margin:3em;">
   <a href="./push-changes.html" class="btn btn-primary">I can run my App locally</a>
 </div>
