--- a/manifest.html.md.erb
+++ b/manifest.html.md.erb
@@ -29,7 +29,7 @@ The file tells Cloud Foundry that this is an application with the name `cf-sampl
 $ cf push
 </pre>
 
-You can define many more variables in a manifest file. To find more information about application manifests, go to the [About Apps](../devguide/deploy-apps/manifest.html) part of this documentation.
+You can define many more variables in a manifest file. To find more information about application manifests, go to the <a href="../devguide/deploy-apps/manifest.html" target="_blank">About Apps</a> part of this documentation.
 
 <div style="text-align:center;margin:3em;">
   <a href="./next-steps.html" class="btn btn-primary">I've added a manifest</a>
