--- a/set-up.html.md.erb
+++ b/set-up.html.md.erb
@@ -24,7 +24,7 @@ Email&gt; user@mydomain.com
 Password&gt;
 </pre>
 
-Authenticating is required to use the CLI tool.
+Authenticating is required to use the CLI tool. The `-a` sets the API endpoint to the one of <%= vars.product_full %>.
 
 Note that if you’re behind a firewall that requires use of a proxy to connect with external HTTP/HTTPS services, you can set the `HTTP_PROXY` or `HTTPS_PROXY` environment variables in your local development environment before running any command.
 
