--- a/environment.html.md.erb
+++ b/environment.html.md.erb
@@ -5,7 +5,7 @@ owner: Tobias Fuhrimann
 
 <strong><%= modified_date %></strong>
 
-<%= vars.product_short %> lets you externalise configuration - storing data such as encryption keys or external resource addresses in [environment variables](../devguide/deploy-apps/environment-variable.html).
+<%= vars.product_short %> lets you externalize configuration - storing data such as encryption keys or external resource addresses in <a href="../devguide/deploy-apps/environment-variable.html" target="_blank">environment variables</a>.
 
 At runtime, environment variables are exposed to the application through its environment. You can use these for example to run Node.js in production mode setting the `NODE_ENV` environment variable.
 
