--- a/next-steps.html.md.erb
+++ b/next-steps.html.md.erb
@@ -7,6 +7,6 @@ You now know how to deploy an app, change its configuration, view logs, scale, a
 
 Here’s some recommended reading. The first one is a set of tips for Node.js developers in the cloud. The second one describes the buildpack which Cloud Foundry uses to bootstrap Node.js applications. The third one is a collection of factors you should consider when creating a modern cloud-native application.
 
-* [Tips for Node.js Applications in the cloud](../buildpacks/node/node-tips.html)
-* [Node.js Buildpack](../buildpacks/node/index.html)
-* [12 facfors for cloud-native apps](http://12factor.net/)
+* <a href="../buildpacks/node/node-tips.html" target="_blank">Tips for Node.js Applications in the cloud</a>
+* <a href="../buildpacks/node/index.html" target="_blank">Node.js Buildpack</a>
+* <a href="http://12factor.net" target="_blank">12 facfors for cloud-native apps</a>
