link cf installation in docs

--- a/set-up.html.md.erb
+++ b/set-up.html.md.erb
@@ -8,10 +8,10 @@ owner: Tobias Fuhrimann
 In this step you will install the Cloud Foundry CLI, which can be used for managing and scaling your applications and services.
 
 <div style="text-align:center;margin:3em;">
-  <a href="<%= vars.cli_download %>" class="btn btn-primary" target="_blank">Download the CF CLI</a>
+  <a href="../cf-cli/install-go-cli.html" target="_blank" class="btn btn-primary">Install the cf CLI</a>
 </div>
 
-Once installed, you can use the CF CLI from your command shell.
+Once installed, you can use the cf CLI from your command shell.
 
 Log in using the e-mail address and password you used when creating your <%= vars.product_short %> account:
 
