--- a/push-changes.html.md.erb
+++ b/push-changes.html.md.erb
@@ -33,7 +33,7 @@ Visiting your application at [http://localhost:3000](http://localhost:3000), you
 Now deploy. All you need to do is `cf push` again:
 
 <pre class="terminal">
-$ cf push cf-sample-app-node
+$ cf push my-node-app
 </pre>
 
 Finally, check that everything is working by visiting your app's URL from your web browser.
