remove cfenv dependency

--- a/bind-service.html.md.erb
+++ b/bind-service.html.md.erb
@@ -45,7 +45,7 @@ Restaging app my-app in org MyOrg / space MySpace as user@mydomain.com...
 Now we want to consume our new MongoDB from within our application. Use npm to add the `mongoose` npm module to your dependencies:
 
 <pre class="terminal">
-$ npm install --save mongoose cfenv
+$ npm install --save mongoose
 cf-sample-app-node@0.0.0 /.../cf-sample-app-node
 └─┬ mongoose@4.4.10
   ├── async@1.5.2
