use short product name

--- a/logs.html.md.erb
+++ b/logs.html.md.erb
@@ -5,7 +5,7 @@ owner: Tobias Fuhrimann
 
 <strong><%= modified_date %></strong>
 
-<%= vars.product_full %> treats logs as streams of time-ordered events aggregated from the output streams of all your app and <%= vars.product_short %> components, providing a single channel for all of the events.
+<%= vars.product_short %> treats logs as streams of time-ordered events aggregated from the output streams of all your app and <%= vars.product_short %> components, providing a single channel for all of the events.
 
 View information about your running app using one of the logging commands, `cf logs`:
 
