--- a/manifest.html.md.erb
+++ b/manifest.html.md.erb
@@ -10,7 +10,7 @@ It's tedious to keep having to specify the app name and other variables each tim
 ```YAML
 ---
 applications:
-  name: my-node-app
+- name: my-node-app
   memory: 128MB
   instances: 1
 
