--- a/prepare.html.md.erb
+++ b/prepare.html.md.erb
@@ -13,7 +13,7 @@ $ git clone https://github.com/swisscom/cf-sample-app-node.git
 $ cd my-node-app
 </pre>
 
-You now have a functioning git repository that contains a simple application as well as a `package.json` file, which is used by Node’s dependency manager npm.
+You now have a functioning git repository that contains a simple <a href="http://expressjs.com/" target="_blank">Express</a> application as well as a `package.json` file, which is used by Node’s dependency manager npm.
 
 <div style="text-align:center;margin:3em;">
   <a href="./deploy.html" class="btn btn-primary">I cloned the App source</a>
