--- a/prepare.html.md.erb
+++ b/prepare.html.md.erb
@@ -10,7 +10,7 @@ Execute the following commands to clone the sample application:
 
 <pre class="terminal">
 $ git clone https://github.com/swisscom/cf-sample-app-node.git
-$ cd my-node-app
+$ cd cf-sample-app-node
 </pre>
 
 You now have a functioning git repository that contains a simple <a href="http://expressjs.com/" target="_blank">Express</a> application as well as a `package.json` file, which is used by Node’s dependency manager npm.
