--- a/run-locally.html.md.erb
+++ b/run-locally.html.md.erb
@@ -14,7 +14,7 @@ $ npm start
 &gt; node ./bin/www
 </pre>
 
-Open [http://localhost:3000](http://localhost:3000) with your web browser. You should see your app running locally.
+Open <a href="http://localhost:3000" target="_blank">http://localhost:3000</a> with your web browser. You should see your app running locally.
 
 To stop the app from running locally, in the CLI, press `Ctrl+C` to exit.
 
