--- a/push-changes.html.md.erb
+++ b/push-changes.html.md.erb
@@ -27,7 +27,7 @@ Now test locally:
 $ npm start
 </pre>
 
-Visiting your application at [http://localhost:3000](http://localhost:3000), you should see the changed title. **You are awesome!**
+Visiting your application at <a href="http://localhost:3000" target="_blank">http://localhost:3000</a>, you should see the changed title. **You are awesome!**
 
 Now deploy. All you need to do is `cf push` again:
 
