--- a/bind-service.html.md.erb
+++ b/bind-service.html.md.erb
@@ -55,7 +55,7 @@ cf-sample-app-node@0.0.0 /.../cf-sample-app-node
   ...
 </pre>
 
-Now edit your `app.js` file to use these modules to connect to the database specified in your `VCAP_SERVICES` environment variable. We do this by requiring the `mongoose` module and adding a route for the `/db` endpoint which returns the `kittens` collection of our MongoDB:
+Now edit your `app.js` file to use this module to connect to the database specified in your `VCAP_SERVICES` environment variable. We do this by requiring the `mongoose` module and adding a route for the `/db` endpoint which returns the `kittens` collection of our MongoDB:
 
 ```javascript
 var express = require('express');
