--- a/bind-service.html.md.erb
+++ b/bind-service.html.md.erb
@@ -59,24 +59,24 @@ Now edit your `app.js` file to use this module to connect to the database specif
 
 ```javascript
 // require dependencies
-var express = require('express');
-var path = require('path');
-var favicon = require('serve-favicon');
-var logger = require('morgan');
-var cookieParser = require('cookie-parser');
-var bodyParser = require('body-parser');
-var mongoose = require('mongoose');
+const express = require('express');
+const path = require('path');
+const favicon = require('serve-favicon');
+const logger = require('morgan');
+const cookieParser = require('cookie-parser');
+const bodyParser = require('body-parser');
+const mongoose = require('mongoose');
 
-var routes = require('./routes/index');
+const routes = require('./routes/index');
 
 // bootstrap our app
-var app = express();
+const app = express();
 
-var mongoUrl = '';
+let mongoUrl = '';
 
 // check if the app is running in the cloud and set the MongoDB settings accordingly
 if (process.env.VCAP_SERVICES) {
-  var vcapServices = JSON.parse(process.env.VCAP_SERVICES);
+  const vcapServices = JSON.parse(process.env.VCAP_SERVICES);
   mongoUrl = vcapServices.mongodb[0].credentials.uri;
 } else {
   mongoUrl = 'mongodb://localhost/db';
@@ -86,12 +86,12 @@ if (process.env.VCAP_SERVICES) {
 mongoose.connect(mongoUrl);
 
 // create a Mongoose schema for kittens
-var kittenSchema = mongoose.Schema({
+const kittenSchema = mongoose.Schema({
   name: 'string'
 });
 
 // create a Mongoose model out of our kitten schema
-var Kitten = mongoose.model('Kitten', kittenSchema);
+const Kitten = mongoose.model('Kitten', kittenSchema);
 
 // view engine setup
 app.set('views', path.join(__dirname, 'views'));
@@ -109,12 +109,12 @@ app.use(express.static(path.join(__dirname, 'public')));
 app.use('/', routes);
 
 // the route where you can retrieve all the kittens in our MongoDB
-app.post('/create-kitten', function (req, res, next) {
-  var kitten = new Kitten({
+app.post('/create-kitten', (req, res, next) => {
+  const kitten = new Kitten({
     name: req.query.name
   });
 
-  kitten.save(function (err, newKitten) {
+  kitten.save((err, newKitten) => {
     if (err) return next(err);
 
     res.send('Kitten ' + newKitten.name + ' saved');
@@ -122,8 +122,8 @@ app.post('/create-kitten', function (req, res, next) {
 })
 
 // the route where you can retrieve all the kittens in our MongoDB
-app.get('/db', function (req, res, next) {
-  Kitten.find(function (err, kittens) {
+app.get('/db', (req, res, next) => {
+  Kitten.find((err, kittens) => {
     if (err) return next(err);
 
     res.json(kittens);
@@ -131,8 +131,8 @@ app.get('/db', function (req, res, next) {
 })
 
 // catch 404 and forward to error handler
-app.use(function(req, res, next) {
-  var err = new Error('Not Found');
+app.use((req, res, next) => {
+  const err = new Error('Not Found');
   err.status = 404;
   next(err);
 });
@@ -142,7 +142,7 @@ app.use(function(req, res, next) {
 // development error handler
 // will print stacktrace
 if (app.get('env') === 'development') {
-  app.use(function(err, req, res, next) {
+  app.use((err, req, res, next) => {
     res.status(err.status || 500);
     res.render('error', {
       message: err.message,
@@ -153,7 +153,7 @@ if (app.get('env') === 'development') {
 
 // production error handler
 // no stacktraces leaked to user
-app.use(function(err, req, res, next) {
+app.use((err, req, res, next) => {
   res.status(err.status || 500);
   res.render('error', {
     message: err.message,
