--- a/push-changes.html.md.erb
+++ b/push-changes.html.md.erb
@@ -10,6 +10,8 @@ In this step you’ll learn how to propagate a local change to the application t
 Change the `title` property in the `routes/index.js` file to 'I am awesome!'. Your final result should look something like this:
 
 ```javascript
+'use strict';
+
 const express = require('express');
 const router = express.Router();
 
