--- a/bind-service.html.md.erb
+++ b/bind-service.html.md.erb
@@ -97,7 +97,7 @@ const Kitten = mongoose.model('Kitten', kittenSchema);
 
 // view engine setup
 app.set('views', path.join(__dirname, 'views'));
-app.set('view engine', 'jade');
+app.set('view engine', 'pug');
 
 // uncomment after placing your favicon in /public
 //app.use(favicon(path.join(__dirname, 'public', 'favicon.ico')));
