--- a/dependencies.html.md.erb
+++ b/dependencies.html.md.erb
@@ -43,7 +43,7 @@ cf-sample-app-node@0.0.0 /.../cf-sample-app-node
 
 Once dependencies are installed, you will be ready to run your app locally.
 
-Upon running `cf push`, we will also push our whole dependencies folder `node_modules`. Since Cloud Foundry runs `npm install` anyways, this is redunant and should be omitted to save bandwidth and even more importantly: time. You can create a `.cfignore` file which works just like a `.gitignore` file and which tells Cloud Foundry what files should be excluded when pushing. Let's create a `.cfignore` file and exclude the `node_modules` folder:
+Upon running `cf push`, we will also push our whole dependencies folder `node_modules`. Since Cloud Foundry runs `npm install` anyways, this is redundant and should be omitted to save bandwidth and even more importantly: time. You can create a `.cfignore` file which works just like a `.gitignore` file and which tells Cloud Foundry what files should be excluded when pushing. Let's create a `.cfignore` file and exclude the `node_modules` folder:
 
 ```
 node_modules
