--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -11,7 +11,7 @@ Hang on for a few more minutes to learn how it all works, so you can make the mo
 
 The tutorial assumes that you have an <a href="https://console.developer.swisscom.com" target="_blank"><%= vars.product_short %> account</a>, and that you have <a href="https://nodejs.org/en/download" target="_blank">Node.js and npm</a> installed locally.
 
-Furthermore, you must have a first Cloud Foundry <a href="https://docs.developer.swisscom.com/concepts/roles.html#orgs" target="_blank">Organization</a> and <a href="https://docs.developer.swisscom.com/concepts/roles.html#spaces" target="_blank">Space</a> to push your apps to. In case you don't have that yet, please follow the <a href="https://console.developer.swisscom.com" target="_blank">tutorials in the web console</a> before returning here.
+Furthermore, you must have a first Cloud Foundry <a href="../concepts/roles.html#orgs" target="_blank">Organization</a> and <a href="../concepts/roles.html#spaces" target="_blank">Space</a> to push your apps to. In case you don't have that yet, please follow the <a href="https://console.developer.swisscom.com" target="_blank">tutorials in the web console</a> before returning here.
 
 <div style="text-align:center;margin:3em;">
   <a href="./set-up.html" class="btn btn-primary">I'm ready to start</a>
