use correct filetype for highlightjs

--- a/dependencies.html.md.erb
+++ b/dependencies.html.md.erb
@@ -9,7 +9,7 @@ owner: Tobias Fuhrimann
 
 The demo app you deployed already has a `package.json`, and it looks something like this:
 
-```JSON
+```json
 {
   "name": "cf-sample-app-node",
 
