--- a/prepare.html.md.erb
+++ b/prepare.html.md.erb
@@ -9,8 +9,8 @@ In this step, you will prepare a simple application that can be deployed.
 Execute the following commands to clone the sample application:
 
 <pre class="terminal">
-$ git clone https://github.com/swisscom/cf-sample-app-node.git
-$ cd cf-sample-app-node
+$ git clone https://github.com/swisscom/cf-sample-app-nodejs.git
+$ cd cf-sample-app-nodejs
 </pre>
 
 You now have a functioning git repository that contains a simple <a href="https://expressjs.com/" target="_blank">Express</a> application as well as a `package.json` file, which is used by Node’s dependency manager npm.
