--- a/push-changes.html.md.erb
+++ b/push-changes.html.md.erb
@@ -34,7 +34,7 @@ Visiting your application at <a href="http://localhost:3000" target="_blank">htt
 Now deploy. All you need to do is `cf push` again:
 
 <pre class="terminal">
-$ cf push my-node-app
+$ cf push my-nodejs-app
 </pre>
 
 Finally, check that everything is working by visiting your app's URL from your web browser.
