--- a/run-locally.html.md.erb
+++ b/run-locally.html.md.erb
@@ -10,7 +10,7 @@ Now start your application locally using the `npm start` command:
 <pre class="terminal">
 $ npm start
 
-&gt; cf-sample-app-node@0.0.0 start /.../cf-sample-app-node
+&gt; cf-sample-app-nodejs@0.0.0 start /.../cf-sample-app-nodejs
 &gt; node ./bin/www
 </pre>
 
