--- a/dependencies.html.md.erb
+++ b/dependencies.html.md.erb
@@ -11,7 +11,7 @@ The demo app you deployed already has a `package.json`, and it looks something l
 
 ```json
 {
-  "name": "cf-sample-app-node",
+  "name": "cf-sample-app-nodejs",
   "description": "A sample Node.js application to run on Cloud Foundry out of the box",
   "keywords": [
     "cloud-foundry"
@@ -37,10 +37,10 @@ The demo app you deployed already has a `package.json`, and it looks something l
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/swisscom/cf-sample-app-node.git"
+    "url": "https://github.com/swisscom/cf-sample-app-nodejs.git"
   },
   "bugs": {
-    "url": "https://github.com/swisscom/cf-sample-app-node/issues"
+    "url": "https://github.com/swisscom/cf-sample-app-nodejs/issues"
   }
 }
 ```
@@ -51,7 +51,7 @@ Run this command in your local directory to install the dependencies, preparing 
 
 <pre class="terminal">
 $ npm install
-cf-sample-app-node@0.0.0 /.../cf-sample-app-node
+cf-sample-app-nodejs@0.0.0 /.../cf-sample-app-nodejs
 ├─┬ body-parser@1.15.0
 │ ├── bytes@2.2.0
 │ ├── content-type@1.0.1
