--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -13,6 +13,10 @@ The tutorial assumes that you have an <a href="https://console.developer.swissco
 
 Furthermore, you must have a first Cloud Foundry <a href="../concepts/roles.html#orgs" target="_blank">Organization</a> and <a href="../concepts/roles.html#spaces" target="_blank">Space</a> to push your apps to. In case you don't have that yet, please follow the <a href="https://console.developer.swisscom.com" target="_blank">tutorials in the web console</a> before returning here.
 
+<p class="note">
+  <strong>Note</strong>: In case you are stuck during the tutorial, you can always check out the <a href="https://github.com/swisscom/cf-sample-app-nodejs/tree/final-result" target="_blank"><code>final-result</code></a> branch of the sample app repo to see what your code should look like.
+</p>
+
 <div style="text-align:center;margin:3em;">
   <a href="./set-up.html" class="btn btn-primary">I'm ready to start</a>
 </div>
