Make npm init interactive

--- a/dependencies.html.md.erb
+++ b/dependencies.html.md.erb
@@ -5,7 +5,7 @@ owner: Tobias Fuhrimann
 
 <strong><%= modified_date %></strong>
 
-<%= vars.product_short %> recognizes an app as Node.js by the existence of a `package.json` file in the root directory. For your own apps, you can create one by running `npm init --yes`.
+<%= vars.product_short %> recognizes an app as Node.js by the existence of a `package.json` file in the root directory. For your own apps, you can create one by running `npm init`.
 
 The demo app you deployed already has a `package.json`, and it looks something like this:
 
