--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -5,13 +5,13 @@ owner: Tobias Fuhrimann
 
 <strong><%= modified_date %></strong>
 
-This tutorial will have you deploying a Node.js app in minutes.
+This tutorial will help you to deploy a Node.js app in minutes.
 
 Hang on for a few more minutes to learn how it all works, so you can make the most out of <%= vars.product_full %>.
 
-The tutorial assumes that you have an <a href="https://console.developer.swisscom.com" target="_blank"><%= vars.product_short %> account</a>, and that you have <a href="https://nodejs.org/en/download" target="_blank">Node.js and npm</a> installed locally.
+The tutorial assumes that you have an <%= vars.product_short %> account, and that you have <a href="https://nodejs.org/en/download" target="_blank">Node.js and npm</a> installed locally.
 
-Furthermore, you must have a first Cloud Foundry <a href="../concepts/roles.html#orgs" target="_blank">Organization</a> and <a href="../concepts/roles.html#spaces" target="_blank">Space</a> to push your apps to. In case you don't have that yet, please follow the <a href="https://console.developer.swisscom.com" target="_blank">tutorials in the web console</a> before returning here.
+Furthermore, you must have a first Cloud Foundry <a href="../concepts/roles.html#orgs" target="_blank">Organization</a> and <a href="../concepts/roles.html#spaces" target="_blank">Space</a> to push your apps to. In case you don't have that yet, please follow the tutorials in the web console before returning here.
 
 <p class="note">
   <strong>Note</strong>: In case you are stuck during the tutorial, you can always check out the <a href="https://github.com/swisscom/cf-sample-app-nodejs/tree/final-result" target="_blank"><code>final-result</code></a> branch of the sample app repo to see what your code should look like.
