Updated service and plan name for mongodb

--- a/bind-service.html.md.erb
+++ b/bind-service.html.md.erb
@@ -10,7 +10,7 @@ The <a href="../service-offerings/index.html" target="_blank">service marketplac
 Create the database:
 
 <pre class="terminal">
-$ cf create-service mongodbent small3rs my-mongodb
+$ cf create-service mongodb-2 small my-mongodb
 Creating service instance my-mongodb in org MyOrg / space MySpace as user@mydomain.com...
 OK
 
